--- a/site/index.html
+++ b/site/index.html
@@ -5,43 +5,103 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
 <body>
     <header>
-        <div class="top-logo"></div>
-        <nav class="top-nav">
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </nav>
-        <div class="slider"></div>
+        <div class="wrapper">
+            <div class="top-logo"></div>
+            <nav class="top-nav clearfix">
+                <div class="search-bar">
+                    <input type="search" placeholder="Szukaj przepisu">
+                </div>
+                <ul>
+                    <li><a href="#">Strona główna</a></li>
+                    <li><a href="#">Przepisy</a></li>
+                    <li><a href="#">Jadłospis</a></li>
+                    <li><a href="#">Co ugotować?</a></li>
+                    <li><a href="#">Moje konto</a></li>
+                    <li><a href="#">Kontakt</a></li>
+                </ul>
+            </nav>
+            <div class="slider">
+                <p>Nie wiesz co zjeść?</p>
+                <p>Z nami się dowiesz!</p>
+                <p>Skorzystaj z naszej zaawansowanej<br>wyszukiwarki przepisów!</p>
+                <button>Sprawdź</button>
+            </div>
+        </div>
     </header>
 
 
-    <section class="last-added"></section>
+    <section class="last-added">
+        <div class="wrapper">
+            <p>
+                Test
+            </p>
+            <div class="last-added-list">
+                <div class="list-element"></div>
+                <div class="list-element"></div>
+                <div class="list-element"></div>
+                <div class="list-element"></div>
+            </div>
+        </div>
+    </section>
 
-    <section class="create-list"></section>
+    <section class="create-list">
+        <div class="bgcolor">
+            <div class="wrapper">
+                <p>Brak pomysłu na codzienne gotowanie?</p>
+                <p>Stwórz jadłospis!</p>
+                <button>Sprawdź</button>
+            </div>
+        </div>
+    </section>
 
-    <section class="who-are-we"></section>
+    <section class="who-are-we">
+        <div class="wrapper">
+            <div class="who-content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, iste atque? Consectetur, officiis
+                    perspiciatis dolores, qui soluta maiores magnam laudantium sint enim nobis exercitationem
+                    consequuntur, velit mollitia quibusdam vel ipsa cupiditate sit eaque. Eos deserunt cupiditate, ut
+                    saepe non accusantium optio repudiandae qui! Illo eum nobis sed odio cumque deserunt libero
+                    similique unde repellendus harum delectus pariatur autem, optio consequatur ad nisi quasi blanditiis
+                    minima, quidem porro eaque accusantium quo doloribus. Eum sequi eaque esse itaque rerum doloribus
+                    sint ea illo, explicabo molestiae ratione optio architecto nam velit laudantium, laboriosam est
+                    minus quae deleniti! Blanditiis, quo! Iure quaerat, nisi autem, nemo deserunt debitis asperiores
+                    repudiandae corporis voluptatum odio quasi quidem, animi unde repellat? Architecto debitis optio
+                    adipisci hic nulla non. Exercitationem sint, voluptas, libero voluptate quos iusto ipsum voluptates,
+                    vel corporis quae deserunt culpa natus veniam doloremque. Iusto, dolor. Totam dolore odit magnam,
+                    assumenda vero consectetur molestias dolor quam officiis dolorum possimus nemo mollitia quasi culpa
+                    laborum numquam voluptatum dolorem iure commodi qui corrupti. Nulla, adipisci quasi debitis, aut,
+                    vel error odit quia at suscipit dolorem assumenda ipsa nihil. Nihil perferendis dolor adipisci qui
+                    assumenda nemo distinctio? Repellendus, placeat neque non recusandae iste iusto sapiente quisquam
+                    ipsa, corporis culpa modi.</p>
+            </div>
+        </div>
+    </section>
 
     <footer>
-        <div class="footer-blocks">
-            <div class="footer-block"></div>
-            <div class="footer-block"></div>
-            <div class="footer-block"></div>
-            <div class="footer-block"></div>
-            <div class="footer-block"></div>
-        </div>
+        <div class="wrapper">
+            <div class="footer-blocks">
+                <div class="footer-block"></div>
+                <div class="footer-block"></div>
+                <div class="footer-block"></div>
+                <div class="footer-block"></div>
+                <div class="footer-block"></div>
+            </div>
 
-        <div class="footer-logo"></div>
-        <div class="footer-links"></div>
+            <div class="footer-logo">
+
+            </div>
+            <div class="footer-links">
+                <p>Copyright &copy; recipe-search</p>
+                <p>All rights reserved</p>
+                <p>recipe-search.pl</p>
+            </div>
+        </div>
     </footer>
 </body>
 
