--- a/site/index.html
+++ b/site/index.html
@@ -38,9 +38,7 @@
 
     <section class="last-added">
         <div class="wrapper">
-            <p>
-                Test
-            </p>
+            <input class="main-search" type="search" placeholder="Szukaj przepisu">
             <div class="last-added-list">
                 <div class="list-element"></div>
                 <div class="list-element"></div>
