--- a/site/index.html
+++ b/site/index.html
@@ -31,6 +31,7 @@
                 <p>Z nami się dowiesz!</p>
                 <p>Skorzystaj z naszej zaawansowanej<br>wyszukiwarki przepisów!</p>
                 <button>Sprawdź</button>
+                <img class="pan" src="img/pan.png" alt="">
             </div>
         </div>
     </header>
